--- a/rapsodiaartesanias/contacto.html
+++ b/rapsodiaartesanias/contacto.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rapsodia Artesanias</title>
+    <title>Rapsodia Artesanias - Nosotros</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&display=swap"
@@ -89,79 +89,48 @@
 
             <p>Catriel - Rio Negro - Argentina</p>
         </div>
-        <a class="boton-secundario" href="contacto.html">Contactar</a>
+        <a class="boton-secundario" href="#">Contactar</a>
     </div>
 </section>
     <!--<img src="img/hero.jpg" alt="Hero image">-->
-    <main class="contenedor sombra">
 
-        <article class="article-presentacion">
-            <p>La elaboración de productos artesanales es un proceso que combina tradición, habilidad y creatividad para crear piezas únicas y de alta calidad. 
-                Cada producto es cuidadosamente hecho a mano por artesanos expertos, utilizando técnicas transmitidas de generación en generación y materiales seleccionados por su excelencia. 
-                Al elegir nuestros productos artesanales, estás asegurándote de adquirir no solo un objeto, sino una obra de arte que lleva consigo la dedicación y el amor por el oficio, 
-                garantizando una experiencia auténtica y una calidad incomparable.
-            </p>
+<main>
+    <div class="contenedor-nosotros con-sidebar">
+        <article>
+            <h1>Nosotros</h1>
+            <img src="img/logos/logo.jpg">
+
+            <p>Maecenas maximus urna vitae nisl semper, id volutpat ipsum scelerisque. Aenean nec ipsum finibus, eleifend dolor at, venenatis risus. Quisque varius orci et augue scelerisque luctus. Praesent laoreet tortor vel mauris suscipit convallis. Duis
+                interdum venenatis metus, ut condimentum tortor fringilla eu. Curabitur mi lorem, pellentesque sed feugiat vitae, commodo id leo. Mauris nec dui consectetur, ullamcorper eros vel, volutpat nulla. Mauris mattis dignissim laoreet. In at
+                tellus et quam iaculis commodo. Aliquam cursus turpis sed elit consequat placerat sit amet in ante. Nulla libero ex, imperdiet non faucibus a, sagittis sit amet ligula. Sed blandit ante est, nec aliquet quam pulvinar sed. Sed varius, lacus
+                in facilisis ultrices, urna turpis ullamcorper nibh, sit amet interdum nisi nisi eget arcu. Vestibulum bibendum velit justo, eget cursus ipsum pharetra in.</p>
+
+            <p>Aliquam urna enim, ullamcorper vel urna id, tincidunt lobortis tortor. Donec bibendum condimentum purus, at rhoncus sapien. Phasellus ac ipsum metus. Aliquam arcu erat, posuere ac dolor vel, imperdiet tempor enim. Fusce tristique consequat
+                convallis. Sed auctor fermentum elit. Vestibulum mi libero, tincidunt quis auctor id, faucibus nec augue. Pellentesque ut vestibulum augue. Aenean in lorem tincidunt, sodales arcu eget, bibendum nisi. Proin vitae magna eu leo vulputate
+                congue consectetur sed felis. Ut tempus neque sit amet tortor aliquet hendrerit. Nulla feugiat metus quis libero convallis fermentum. Morbi eleifend id tellus quis iaculis. Sed vitae turpis eget eros faucibus luctus at vitae lacus. Nunc
+                blandit arcu arcu, non condimentum dui posuere vitae. Nulla facilisi.</p>
+
+            <p>Aliquam erat volutpat. Ut dapibus tincidunt odio, a pulvinar dolor dapibus varius. Quisque fringilla faucibus sapien nec blandit. Cras at lectus tincidunt mi cursus dapibus in a nunc. Suspendisse vitae velit orci. Suspendisse nisi sapien,
+                vehicula eget vehicula in, lacinia vitae tellus. Nulla facilisi. Sed consectetur consectetur sapien. Duis pretium blandit massa, mattis maximus nunc finibus in. Vestibulum ultrices ex lorem, sed ullamcorper est rhoncus sit amet. Pellentesque
+                placerat ex sed nisl posuere, a porta augue finibus. Sed auctor mauris nec lacus interdum, nec consequat est pharetra. Praesent sit amet rhoncus diam. Nullam risus sapien, euismod vitae condimentum ac, consequat quis dui. Donec varius
+                condimentum orci ac malesuada. Nulla bibendum quam viverra, bibendum ex vel, suscipit lacus.</p>
         </article>
-        <div class="contenedor dos-columnas">
-            <article class="entrada-blog">               
-                <img src="img/cartera_cuero1.jpg">
-                <p>Los mejores productos Artesanales los podras encontrar en nuestro Catalogo</p>
-                <a href="catalogo.html">Catalogo</a>
-            </article>
-            <article class="entrada-blog">
-                <img src="img/libreta1.jpg">
-                <p>¿Deseas un producto personalizado?</p>
-                <a href="contacto.html">Contacto</a>
-            </article>
-        </div>
+        <aside>
+            <h2>Visión</h2>
+            <p>Titulo Blog, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
+                in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+
+
+            <h2>Misión</h2>
+            <p>Titulo Blog, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
+                in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        </aside>
+    </div>
+</main>
 
 
 
-        <div class="servicios">
-            <section class="servicio">
-                <h3>Envíos</h3>
-                <div class="iconos">
-                    <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-cube-send" width="60" height="60" viewBox="0 0 24 24" stroke-width="1.5" stroke="#597e8d" fill="none" stroke-linecap="round" stroke-linejoin="round">
-                        <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
-                        <path d="M16 12.5l-5 -3l5 -3l5 3v5.5l-5 3z" />
-                        <path d="M11 9.5v5.5l5 3" />
-                        <path d="M16 12.545l5 -3.03" />
-                        <path d="M7 9h-5" />
-                        <path d="M7 12h-3" />
-                        <path d="M7 15h-1" />
-                      </svg>
-                </div>
-                <p>Contamos con servicio de Envíos</p>
-            </section>
-            <section class="servicio">
-                <h3>Ubicación</h3>
-                <div class="iconos">
-                    <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-map-pin" width="44" height="44" viewBox="0 0 24 24" stroke-width="1.5" stroke="#597e8d" fill="none" stroke-linecap="round" stroke-linejoin="round">
-                        <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
-                        <path d="M9 11a3 3 0 1 0 6 0a3 3 0 0 0 -6 0" />
-                        <path d="M17.657 16.657l-4.243 4.243a2 2 0 0 1 -2.827 0l-4.244 -4.243a8 8 0 1 1 11.314 0z" />
-                      </svg>
-                </div>
-                <p>Nos podrás encontrar en Nuestro Local ó Ferias Artesanales</p>
-            </section>
-            <section class="servicio">
-                <h3>E-commerce</h3>
-                <div class="iconos">
-                    <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-credit-card" width="44" height="44" viewBox="0 0 24 24" stroke-width="1.5" stroke="#597e8d" fill="none" stroke-linecap="round" stroke-linejoin="round">
-                        <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
-                        <path d="M3 5m0 3a3 3 0 0 1 3 -3h12a3 3 0 0 1 3 3v8a3 3 0 0 1 -3 3h-12a3 3 0 0 1 -3 -3z" />
-                        <path d="M3 10l18 0" />
-                        <path d="M7 15l.01 0" />
-                        <path d="M11 15l2 0" />
-                      </svg>
-                </div>
-                <p>Disponemos varios medios de pagos</p>
-            </section>
-        </div>
-    
 
-        
-    </main>
 
 
     <footer class="footer">
