--- a/rapsodiaartesanias/contacto.html
+++ b/rapsodiaartesanias/contacto.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rapsodia Artesanias - Nosotros</title>
+    <title>Rapsodia Artesanias - Contacto</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&display=swap"
@@ -95,37 +95,56 @@
     <!--<img src="img/hero.jpg" alt="Hero image">-->
 
 <main>
-    <div class="contenedor-nosotros con-sidebar">
-        <article>
-            <h1>Nosotros</h1>
-            <img src="img/logos/logo.jpg">
-
-            <p>Maecenas maximus urna vitae nisl semper, id volutpat ipsum scelerisque. Aenean nec ipsum finibus, eleifend dolor at, venenatis risus. Quisque varius orci et augue scelerisque luctus. Praesent laoreet tortor vel mauris suscipit convallis. Duis
-                interdum venenatis metus, ut condimentum tortor fringilla eu. Curabitur mi lorem, pellentesque sed feugiat vitae, commodo id leo. Mauris nec dui consectetur, ullamcorper eros vel, volutpat nulla. Mauris mattis dignissim laoreet. In at
-                tellus et quam iaculis commodo. Aliquam cursus turpis sed elit consequat placerat sit amet in ante. Nulla libero ex, imperdiet non faucibus a, sagittis sit amet ligula. Sed blandit ante est, nec aliquet quam pulvinar sed. Sed varius, lacus
-                in facilisis ultrices, urna turpis ullamcorper nibh, sit amet interdum nisi nisi eget arcu. Vestibulum bibendum velit justo, eget cursus ipsum pharetra in.</p>
-
-            <p>Aliquam urna enim, ullamcorper vel urna id, tincidunt lobortis tortor. Donec bibendum condimentum purus, at rhoncus sapien. Phasellus ac ipsum metus. Aliquam arcu erat, posuere ac dolor vel, imperdiet tempor enim. Fusce tristique consequat
-                convallis. Sed auctor fermentum elit. Vestibulum mi libero, tincidunt quis auctor id, faucibus nec augue. Pellentesque ut vestibulum augue. Aenean in lorem tincidunt, sodales arcu eget, bibendum nisi. Proin vitae magna eu leo vulputate
-                congue consectetur sed felis. Ut tempus neque sit amet tortor aliquet hendrerit. Nulla feugiat metus quis libero convallis fermentum. Morbi eleifend id tellus quis iaculis. Sed vitae turpis eget eros faucibus luctus at vitae lacus. Nunc
-                blandit arcu arcu, non condimentum dui posuere vitae. Nulla facilisi.</p>
-
-            <p>Aliquam erat volutpat. Ut dapibus tincidunt odio, a pulvinar dolor dapibus varius. Quisque fringilla faucibus sapien nec blandit. Cras at lectus tincidunt mi cursus dapibus in a nunc. Suspendisse vitae velit orci. Suspendisse nisi sapien,
-                vehicula eget vehicula in, lacinia vitae tellus. Nulla facilisi. Sed consectetur consectetur sapien. Duis pretium blandit massa, mattis maximus nunc finibus in. Vestibulum ultrices ex lorem, sed ullamcorper est rhoncus sit amet. Pellentesque
-                placerat ex sed nisl posuere, a porta augue finibus. Sed auctor mauris nec lacus interdum, nec consequat est pharetra. Praesent sit amet rhoncus diam. Nullam risus sapien, euismod vitae condimentum ac, consequat quis dui. Donec varius
-                condimentum orci ac malesuada. Nulla bibendum quam viverra, bibendum ex vel, suscipit lacus.</p>
+    <div class="contenedor dos-columnas">
+        <article class="entrada-blog">
+            <img src="img/logos/logosm.jpg">
+            <p>
+                ¿Deseas hacer un regalo especial y personalizado?.<br> 
+                ¿Llega fin de año y quieres entragar un recuerdo unico?<br>
+                ¡Comunicate con nosotros! 
+            </p>
+            
         </article>
-        <aside>
-            <h2>Visión</h2>
-            <p>Titulo Blog, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
-                in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-
-
-            <h2>Misión</h2>
-            <p>Titulo Blog, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
-                in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-        </aside>
+        <form class="formulario"  id="myForm">
+            <div class="campo">
+                <label class="campo__label" for="nombre">Nombre</label>
+                <input type="text" id="nombre" placeholder="Tu nombre" class="campo__field" required>
+                <span class="error-message"></span>
+            </div>
+            <div class="campo">
+                <label class="campo__label" for="email">E-mail</label>
+                <input type="email" id="email" placeholder="Tu mail" class="campo__field" required>
+                <span class="error-message"></span>
+            </div>
+            <div class="campo">
+                <label class="campo__label" for="telefono">Teléfono</label>
+                <input type="tel" id="telefono" placeholder="Tu Teléfono" class="campo__field" required>
+                <span class="error-message"></span>
+            </div>
+            <div class="campo">
+                <label class="campo__label" for="motivo">Motivo</label>
+                <input type="text" id="motivo"  class="campo__field">
+            </div>
+            <div class="campo">
+                <label class="campo__label" for="mensaje">Mensaje</label>
+                <textarea id="mensaje" class="campo__field campo__field--textarea"></textarea>
+            </div>
+            <div class="campo">
+                <label class="campo__label" for="pregunta">¿Cómo nos conocio?</label>
+                <div class="check">
+                    <label class="check__label"><input type="checkbox" class="campo__check" id="" name="">Buscadores Web</label>
+                    <label class="check__label"><input type="checkbox" class="campo__check" id="" name="">Feria Artesanos</label>
+                    <label class="check__label"><input type="checkbox" class="campo__check" id="" name="">Redes Sociales</label>
+                    <label class="check__label"><input type="checkbox" class="campo__check" id="" name="">Otro</label>
+                </div>
+            </div>
+            <div class="campo">
+                <input type="submit" value="Enviar" class="btn-form boton-secundario" onclick="enviar()">
+            </div>
+        </form>
     </div>
+
+
 </main>
 
 
@@ -138,6 +157,7 @@
     </footer>
 
     <script src="js/scriptsMenu.js"></script>
+    <script src="js/contacto.js"></script>
 </body>
 
 </html>
